finished location method channel

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,6 +28,10 @@ android {
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
 
+    dependencies {
+        implementation "com.google.android.gms:play-services-location:21.0.1"
+    }
+
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
